<resources>
    <string name="app_name">ReadTracker</string>
    <string name="usuario_correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="repetirpassword">Repetir contraseña</string>
    <string name="ingresar">Ingresar</string>

    <string name="enviarFormularioRegistro">Registrar</string>
    <string name="cancelarRegistro">Cancelar</string>
    <string name="nombre_usuario">Nombre de user</string>

    <string name="msgOlvidar">Se olvidó su contraseña? Click aquí</string>
    <string name="registarse">Registarse</string>
    <string name="readtracker">readTracker</string>
    <string name="done">LEIDO</string>
    <string name="pending">FALTA</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="createUserSendText">Registrar</string>
    <string name="createUserReturnText">Volver</string>
    <string name="passwordRepetir">Repetir contraseña</string>
    <string name="AuthorLectura">Autor</string>
    <string name="TituloLectura">Título*</string>
    <string name="Url">URL</string>
    <string name="pgs"># Pgs.*</string>
    <string name="Etiqueta">Etiqueta*</string>
    <string name="EnviarReading">Enviar</string>
    <string name="DetailsEditar">Editar</string>
    <string name="Estado">Estado</string>
    <string name="cerrar_sesi_n">Cerrar sesion</string>
</resources>
