<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ToggleButton
        android:id="@+id/rv_list_readings_read_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/togglebutton"
        android:textOff="@string/pending"
        android:textOn="@string/done" />

    <LinearLayout
        android:id="@+id/rv_list_readings_text_layout"
        android:layout_width="210sp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15sp"
        android:paddingRight="15sp">

        <TextView
            android:id="@+id/rv_list_readings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/rv_list_readings_other_info"
            android:layout_width="125sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/rv_list_readings_more_details"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:text="" />

    <Button
        android:id="@+id/rv_list_readings_delete_reading"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:layout_marginLeft="5sp"
        android:text=""
        android:layout_marginStart="5sp" />


</LinearLayout>