<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivityOld">

    <LinearLayout
        android:id="@+id/LinearLayoutDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"

        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="77dp">

        <!-- USUARIO CORREO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:hint="@string/usuario_correo"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- PASSWORD -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- BOTONES INGRESAR REGISTRAR -->
        <LinearLayout
            android:id="@+id/LinearLayoutBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:orientation="horizontal">

            <!-- INGRESAR -->
            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:onClick="btnIngresar"
                android:text="@string/ingresar"
                tools:ignore="OnClick" />
            <!-- REGISTRAR -->
            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:layout_weight="1"
                android:onClick="btnRegistrar"
                android:text="@string/registarse" />

        </LinearLayout>

    </LinearLayout>


    <!-- RECUPERAR PASSWORD -->
    <LinearLayout
        android:id="@+id/LinearLayoutOlvido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewRecuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="textViewRecuperar"
            android:text="@string/msgOlvidar" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>